# autotools-linter

./: Makefile.am  TODO  atlint  atlint.py  configure.ac  setup.py
atlint/: check.py  checks.py  main.py  parse.py
